--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -4,4 +4,11 @@
   <li><%= link_to list.name, list_path(list.id) %></li>
   <% end %>
 </ul>
+
+<%= cl_image_tag("https://res.cloudinary.com/dvinewomn/image/upload/v1677250438/cld-sample-3.jpg",
+width: 400, height: 300, crop: :fill) %>
+
+<%= cl_image_tag("https://res.cloudinary.com/dvinewomn/image/upload/v1677250428/samples/animals/kitten-playing.gif",
+      width: 150, height: 150, crop: :thumb, gravity: :face) %>
+
 <div class="btn btn-warning"><%= link_to 'Add list', new_list_path %></div>
